--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <title>Zoya Dyatel1984</title>
+    <title>Zoya Dyatel</title>
   </head>
   <body>
     <header class="container">
